--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 default = []
 
 # Enable serialization of `Tree`.
-serde = ["dep:serde", "egui/serde"]
+#serde = ["dep:serde", "egui/serde"]
 
 [dependencies]
 
 egui = { version = "0.27", default-features = false }
-serde = { version = "1", optional = true, features = ["derive"] }
+#serde = { version = "1", optional = true, features = ["derive"] }
+serde = "1.0.200"
 egui_extras = {version = "0.27.0", default-features = true}
 
 duplicate = "1.0"
