--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "atmerge"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
+repository = "https://github.com/babazaroni/atmerge"
 
 
 [features]
